<resources>
    <string name="app_name">Animals</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_details">An application that gives detailed observations on extinct animal species throughout the earths existence</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sure_to_delete">Sure to delete?</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="explanation">Explanation</string>
    <string name="binomial_name">Binomial Name</string>
    <string name="common_name">Common Name</string>
    <string name="location">Location</string>
    <string name="last_recorded">Last Recorded</string>
    <string name="language">Language</string>
</resources>