<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/_50dp"
        android:padding="@dimen/_20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivItem"
            tools:src="@drawable/flat_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp">

            <TextView
                android:textSize="@dimen/_20sp"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:text="@string/binomial_name"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ivRead"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:src="@drawable/like_empty" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvBname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:textSize="@dimen/_20sp"
            android:layout_width="wrap_content"
            android:text="@string/common_name"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem" />
        <TextView
            android:textSize="@dimen/_20sp"
            android:layout_width="wrap_content"
            android:text="@string/location"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:textSize="@dimen/_20sp"
            android:layout_width="wrap_content"
            android:text="@string/last_recorded"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLastRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:textSize="@dimen/_20sp"
            android:layout_width="wrap_content"
            android:text="@string/explanation"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:justificationMode="inter_word"
            android:id="@+id/tvExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem/random" />


    </LinearLayout>

</ScrollView>